frontend/tests/cases/negative/levelApprox.gr
-- Bad, declassification
castLevel : ∀ {a : Type} . a [Private] → a [Public]
castLevel [x] = [x]