frontend/tests/cases/negative/levelApprox.gr.output
Type checking failed: 
Grading error: frontend/tests/cases/negative/levelApprox.gr:3:1:
Private value cannot be moved to level Public